[package]
name = "chronicle"
version = "1.0.0-beta.30"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "IOTA permanode implemented as an IOTA Node Extension (INX)."
readme = "README.md"
repository = "https://github.com/iotaledger/inx-chronicle"
license = "Apache-2.0"
keywords = ["iota", "storage", "permanode", "chronicle", "inx"]
homepage = "https://www.iota.org"
rust-version = "1.60"

[lib]
name = "chronicle"
path = "src/lib.rs"

[[bin]]
name = "inx-chronicle"
path = "src/bin/inx-chronicle/main.rs"

[dependencies]

# Required
async-trait = { version = "0.1", default-features = false }
bytesize = { version = "1.1", default-features = false }
clap = { version = "4.1", default-features = false, features = ["env", "derive", "std", "help", "usage", "error-context", "wrap_help"] }
decimal = { version = "2.1", default-features = false, features = [ "serde" ] }
derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref", "deref_mut", "sum" ] }
dotenvy = { version = "0.15", default-features = false }
eyre = { version = "0.6", default-features = false, features = [ "track-caller", "auto-install" ] }
futures = { version = "0.3", default-features = false }
humantime = { version = "2.1.0", default-features = false }
humantime-serde = { version = "1.1", default-features = false }
iota-crypto = { version = "0.15", default-features = false, features = [ "blake2b" ] }
iota-types = { version = "1.0.0-rc.4", default-features = false, features = [ "api", "block", "std" ] }
mongodb = { version = "2.3", default-features = false, features = [ "tokio-runtime" ] }
packable = { version = "0.7", default-features = false }
pin-project = { version = "1.0", default-features = false }
prefix-hex = { version = "0.5.0", default-features = false, features = [ "primitive-types" ] }
primitive-types = { version = "0.12", default-features = false }
serde = { version = "1.0", features = [ "derive" ], default-features = false }
serde_bytes = { version = "0.11", default-features = false }
serde_json = { version = "1.0", default-features = false, features = [ "std" ] }
thiserror = { version = "1.0", default-features = false }
time = { version = "0.3", default-features = false, features = [ "std" ] }
tokio = { version = "1.24", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
tokio-stream = { version = "0.1", default-features = false }
tracing = { version = "0.1", default-features = false, features = [ "std", "attributes", "release_max_level_debug" ] }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "std", "fmt", "ansi", "smallvec", "tracing-log", "local-time", "env-filter" ] }
uint = { version = "0.9", default-features = false }
url = { version = "2.3", default-features = false }
uuid = { version = "1.2", default-features = false, features = [ "v4" ] }

# Optional
chrono = { version = "0.4", default-features = false, features = [ "std" ], optional = true }
influxdb = { version = "0.5", default-features = false, features = [ "use-serde", "reqwest-client-rustls", "derive" ], optional = true }

# API
auth-helper = { version = "0.3", default-features = false, optional = true }
axum = { version = "0.5", default-features = false, features = [ "http1", "json", "query", "original-uri", "headers" ], optional = true }
ed25519 = { version = "2.0", default-features = false, features = [ "alloc", "pkcs8", "pem" ], optional = true }
ed25519-dalek = { version = "1.0", default-features = false, features = [ "u64_backend" ], optional = true }
hex = { version = "0.4", default-features = false, optional = true }
hyper = { version = "0.14", default-features = false, features = [ "server", "tcp", "stream" ], optional = true }
rand = { version = "0.8", default-features = false, features = [ "std" ], optional = true }
regex = { version = "1.7", default-features = false, features = [ "std" ], optional = true }
rust-argon2 = { version = "1.0.0", default-features = false, optional = true }
serde_urlencoded = { version = "0.7", default-features = false, optional = true }
tower = { version = "0.4", default-features = false, optional = true }
tower-http = { version = "0.3", default-features = false, features = [ "cors", "catch-panic", "trace" ], optional = true }
zeroize = { version = "1.5", default-features = false, features = [ "std" ], optional = true }

# INX
inx = { version = "1.0.0-beta.8", default-features = false, optional = true }
tonic = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
iota-types = { version = "1.0.0-rc.4", default-features = false, features = [ "api", "block", "std", "rand" ] }
rand = { version = "0.8", default-features = false, features = [ "std" ] }

[features]
default = [
    "analytics",
    "api",
    "inx",
    "metrics",
    "poi",
]
analytics = [
    "dep:influxdb",
]
api = [
    "dep:auth-helper",
    "dep:axum",
    "dep:ed25519",
    "dep:ed25519-dalek",
    "dep:hex",
    "derive_more/from",
    "dep:hyper",
    "dep:rand",
    "dep:regex",
    "dep:rust-argon2",
    "dep:serde_urlencoded",
    "dep:tower",
    "dep:tower-http",
    "dep:zeroize",
]
inx = [ 
    "dep:inx",
    "dep:tonic",
]
metrics = [
    "dep:influxdb",
    "dep:chrono",
]
poi = [
    "api",
]
rand = [
    "iota-types/rand",
]

[profile.production]
inherits = "release"
codegen-units = 1
lto = true
strip = "symbols"
