[package]
name = "chronicle"
version = "1.0.0-rc.2"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "IOTA permanode implemented as an IOTA Node Extension (INX)."
readme = "README.md"
repository = "https://github.com/iotaledger/inx-chronicle"
license = "Apache-2.0"
keywords = ["iota", "storage", "permanode", "chronicle", "inx"]
homepage = "https://www.iota.org"
rust-version = "1.60"

[lib]
name = "chronicle"
path = "src/lib.rs"

[[bin]]
name = "inx-chronicle"
path = "src/bin/inx-chronicle/main.rs"

[dependencies]

# Required
async-trait = { version = "0.1", default-features = false }
bytesize = { version = "1.1", default-features = false }
clap = { version = "4.1", default-features = false, features = ["env", "derive", "std", "help", "usage", "error-context", "wrap_help"] }
decimal = { version = "2.1", default-features = false, features = [ "serde" ] }
derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref", "deref_mut", "sum" ] }
dotenvy = { version = "0.15", default-features = false }
eyre = { version = "0.6", default-features = false, features = [ "track-caller", "auto-install" ] }
futures = { version = "0.3", default-features = false }
humantime = { version = "2.1.0", default-features = false }
humantime-serde = { version = "1.1", default-features = false }
iota-crypto = { version = "0.23", default-features = false, features = [ "blake2b", "ed25519", "slip10", "bip39-en", "random", "zeroize" ] }
iota-sdk = { git = "https://github.com/iotaledger/iota-sdk", branch = "2.0", default-features = false, features = [ "std", "serde" ] }
mongodb = { version = "2.4", default-features = false, features = [ "tokio-runtime" ] }
packable = { version = "0.8", default-features = false }
pin-project = { version = "1.0", default-features = false }
prefix-hex = { version = "0.7.0", default-features = false, features = [ "primitive-types", "std" ] }
primitive-types = { version = "0.12", default-features = false }
serde = { version = "1.0", features = [ "derive" ], default-features = false }
serde_bytes = { version = "0.11", default-features = false }
serde_json = { version = "1.0", default-features = false, features = [ "std" ] }
thiserror = { version = "1.0", default-features = false }
time = { version = "0.3", default-features = false, features = [ "std", "serde", "macros" ] }
tokio = { version = "1.26", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
tokio-stream = { version = "0.1", default-features = false }
tracing = { version = "0.1", default-features = false, features = [ "std", "attributes", "release_max_level_debug" ] }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "std", "fmt", "ansi", "smallvec", "tracing-log", "local-time", "env-filter" ] }
uint = { version = "0.9", default-features = false }
url = { version = "2.3", default-features = false }
uuid = { version = "1.3", default-features = false, features = [ "v4" ] }

# Optional
chrono = { version = "0.4", default-features = false, features = [ "std" ], optional = true }
influxdb = { version = "0.7", default-features = false, features = [ "use-serde", "reqwest-client-rustls", "derive" ], optional = true }

# API
auth-helper = { version = "0.3", default-features = false, optional = true }
axum = { version = "0.5", default-features = false, features = [ "http1", "json", "query", "original-uri", "headers" ], optional = true }
ed25519-zebra = { version = "4.0", default-features = false, features = [ "std", "pkcs8", "pem" ], optional = true }
hex = { version = "0.4", default-features = false, optional = true }
hyper = { version = "0.14", default-features = false, features = [ "server", "tcp", "stream" ], optional = true }
rand = { version = "0.8", default-features = false, features = [ "std" ], optional = true }
regex = { version = "1.7", default-features = false, features = [ "std" ], optional = true }
rust-argon2 = { version = "2.0.0", default-features = false, optional = true }
serde_urlencoded = { version = "0.7", default-features = false, optional = true }
tower = { version = "0.4", default-features = false, optional = true }
tower-http = { version = "0.4", default-features = false, features = [ "cors", "catch-panic", "trace" ], optional = true }
zeroize = { version = "1.5", default-features = false, features = [ "std", "zeroize_derive" ], optional = true }

# INX
inx = { git = "https://github.com/iotaledger/inx", default-features = false, optional = true }
tonic = { version = "0.10", default-features = false, optional = true }

[dev-dependencies]
bincode = { version = "1.3", default-features = false }
iota-sdk = { git = "https://github.com/iotaledger/iota-sdk", branch = "2.0", default-features = false, features = [ "std", "serde", "rand" ] }
pretty_assertions = { version = "1.4", default-features = false, features = [ "std" ] }
rand = { version = "0.8", default-features = false, features = [ "std" ] }
ron = { version = "0.8", default-features = false }
yazi = { version = "0.1", default-features = false }

[features]
default = [
    "analytics",
    "api",
    "inx",
    "metrics",
    "poi",
]
analytics = [
    "influx",
]
api = [
    "dep:auth-helper",
    "dep:axum",
    "dep:ed25519-zebra",
    "dep:hex",
    "derive_more/from",
    "dep:hyper",
    "dep:rand",
    "dep:regex",
    "dep:rust-argon2",
    "dep:serde_urlencoded",
    "dep:tower",
    "dep:tower-http",
    "dep:zeroize",
]
influx = [
    "dep:influxdb",
]
inx = [ 
    "dep:inx",
    "dep:tonic",
]
metrics = [
    "influx",
    "dep:chrono",
]
poi = [
    "api",
]

[profile.production]
inherits = "release"
codegen-units = 1
lto = true
strip = "symbols"
